make xmls and sh compatible with up to date packages, add simulations with missing data, add large trees